--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Kimberly Duvall- Front-End Developer</title>
   </head>
   <body>
     <h1>Hi, I'm</h1>
