--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     <title>Kimberly Duvall- Front-End Developer</title>
   </head>
   <body>
-    <h1>Hi, I'm</h1>
-    <h2>Kimberly Duvall</h2>
-    <h3>Front-End Developer from Phoenix, AZ</h3>
+    <div class="hero">
+      <h2>Hello, I'm</h2>
+      <h1>Kimberly Duvall</h1>
+      <h3 class="mb-5">Front-End Developer based Phoenix, AZ</h3>
+      <div>
+        <a href="#" class="btn btn-branding">Contact Me</a>
+      </div>
+    </div>
   </body>
 </html>
