Adding Some Page Content

--- a/index.html
+++ b/index.html
@@ -37,5 +37,46 @@
         <a href="#" class="btn btn-branding">Contact Me</a>
       </div>
     </div>
+    <p class="text-center m-5">Highlights of my Projects</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+
+        <div class="col-6">
+          <h2 class="mb-5">Weather App</h2>
+          <p class="mb-4">
+            Weather app using API and JavaScript is an exciting project that
+            combines the power of web development and real-time data retrieval.
+          </p>
+          <a
+            href="https://weatherappbykim.netlify.app/"
+            class="btn btn-branding-outline"
+            >Launch Project</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+
+        <div class="col-6">
+          <h2 class="mb-5">Weather App</h2>
+          <p class="mb-4">
+            Weather app using API and JavaScript is an exciting project that
+            combines the power of web development and real-time data retrieval.
+          </p>
+          <a
+            href="https://weatherappbykim.netlify.app/"
+            class="btn btn-branding-outline"
+            >Launch Project</a
+          >
+        </div>
+      </div>
+    </div>
   </body>
 </html>
