intergrated homepage content design

--- a/index.html
+++ b/index.html
@@ -40,41 +40,53 @@
     <p class="text-center m-5">Highlights of my Projects</p>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/weather.png"
+            class="img-fluid"
+            alt="weather app project"
+          />
         </div>
 
-        <div class="col-6">
-          <h2 class="mb-5">Weather App</h2>
-          <p class="mb-4">
-            Weather app using API and JavaScript is an exciting project that
-            combines the power of web development and real-time data retrieval.
-          </p>
-          <a
-            href="https://weatherappbykim.netlify.app/"
-            class="btn btn-branding-outline"
-            >Launch Project</a
-          >
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p>
+              Weather app using API and JavaScript is an exciting project that
+              combines the power of web development and real-time data
+              retrieval.
+            </p>
+            <a
+              href="https://weatherappbykim.netlify.app/"
+              class="btn btn-branding-outline mb-5"
+              title="Launch Project"
+              >Launch Project</a
+            >
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">World Clock App</h2>
+            <p>
+              Using API and JavaScript and find the time in any place in the
+              world!
+            </p>
+            <a
+              href="https://kd-world-clock.netlify.app/"
+              class="btn btn-branding-outline"
+              title="Launch Project"
+              >Launch Project</a
+            >
+          </div>
         </div>
-
-        <div class="col-6">
-          <h2 class="mb-5">Weather App</h2>
-          <p class="mb-4">
-            Weather app using API and JavaScript is an exciting project that
-            combines the power of web development and real-time data retrieval.
-          </p>
-          <a
-            href="https://weatherappbykim.netlify.app/"
-            class="btn btn-branding-outline"
-            >Launch Project</a
-          >
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/worldclock.png"
+            class="img-fluid"
+            alt="world clock app"
+          />
         </div>
       </div>
     </div>
