Added About Me Page Structure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mt-5">Weather App</h2>
             <p>
               Weather app using API and JavaScript is an exciting project that
               combines the power of web development and real-time data
@@ -70,8 +70,11 @@
           <div class="project-description">
             <h2 class="mb-5">World Clock App</h2>
             <p>
-              Using API and JavaScript and find the time in any place in the
-              world!
+              Building a world clock app using API and JavaScript is a fantastic
+              way to create a practical and informative tool. With JavaScript's
+              capability to handle time zones and dynamic web content,
+              developers can create a visually appealing interface that
+              showcases multiple world clocks.
             </p>
             <a
               href="https://kd-world-clock.netlify.app/"
