--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
     </head>
 
     <body>
-      <div class="about-section container">
+      <div class="content-container container">
         <div class="row">
           <div class="col-lg-6">
-            <div class="about-section-content">
+            <div class="content">
               <h1 class="mb-5">Hi I am Kimberly Duvall</h1>
               <h2 class="mb-5">Frontend Developer, based in Arizona.</h2>
               <p class="mb-4">
