updated contact page

--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,29 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
     <title>Kimberly Duvall- Front-End Developer</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="mb-6 text-center">Let's get in touch!</h1>
+    <div class="content-container container">
+      <div class="content">
+        <h3 class="mb-6 text-center">Email</h3>
+        <p class="text-center">
+          <a href="mailto:fallenmurphy@gmail.com">fallenmurphy@gmail.com</a>
+        </p>
+        <h3 class="mb-6 text-center">Twitter</h3>
+        <p class="text-center">
+          <a href="https://www.twitter.com/coding.kim " target="_blank">
+            Coding.Kim</a
+          >
+        </p>
+        <h3 class="mb-6 text-center">Linedin</h3>
+        <p class="text-center">
+          <a
+            href="https://www.linkedin.com/in/kimberly-duvall-b9205431/"
+            target="_blank"
+            >Linkedin Profile</a
+          >
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
