--- a/work.html
+++ b/work.html
@@ -29,6 +29,39 @@
     <title>Kimberly Duvall- Front-End Developer</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg" style="background-color: #62929a">
+      <div class="container-fluid">
+        <i class="fa-solid fa-laptop-code fa-lg" style="color: #b2e0df"></i>
+        <a class="navbar-brand ms-2" href="#">Kimberly Duvall |</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/work.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">Take a look at my work!</h1>
