--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       <h1>Kimberly Duvall</h1>
       <h3 class="mb-5">Front-End Developer based Phoenix, AZ</h3>
       <div>
-        <a href="#" class="btn btn-branding">Contact Me</a>
+        <a href="mailto:fallenmurphy@gmail.com" class="btn btn-branding"
+          >Contact Me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">Highlights of my Projects</p>
