--- a/contact.html
+++ b/contact.html
@@ -66,26 +66,59 @@
       <div class="content">
         <h1 class="mb-6 text-center">Let's get in touch!</h1>
 
-        <h3 class="mb-6 text-center">Email</h3>
+        <h3 class="m-6 text-center">Email</h3>
         <p class="text-center">
-          <a href="mailto:fallenmurphy@gmail.com">fallenmurphy@gmail.com</a>
+          <a href="mailto:coding.kim.d@gmail.com" class="btn btn-branding">coding.kim.d@gmail.com</a>
         </p>
 
         <h3 class="mb-6 text-center">Twitter</h3>
         <p class="text-center">
-          <a href="https://www.twitter.com/coding.kim " target="_blank">
-            Coding.Kim</a
+          <a href="https://www.twitter.com/coding.kim "  class="btn btn-branding target="_blank">
+            @Coding.Kim</a
           >
         </p>
         <h3 class="mb-6 text-center">Linedin</h3>
         <p class="text-center">
           <a
             href="https://www.linkedin.com/in/kimberly-duvall-b9205431/"
-            target="_blank"
+            class="btn btn-branding target="_blank" 
             >Linkedin Profile</a
           >
         </p>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p>Let's Work Together!</p>
+          </div>
+          <div>
+            <a href="mailto:coding.kim.d@gamil.com" class="btn btn-branding"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:coding.kim.d@gamil.com" class="email-link"
+            >coding.kim.d@gamil.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="https://www.twitter.com/coding.kim" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="https://github.com/EleanorSplicer" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/kimberly-duvall-b9205431/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
