--- a/about.html
+++ b/about.html
@@ -93,6 +93,39 @@
             />
           </div>
         </div>
+        <footer>
+          <div
+            class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+          >
+            <div>
+              <h4>Work Inquiry</h4>
+              <p>Let's Work Together!</p>
+            </div>
+            <div>
+              <a href="mailto:coding.kim.d@gamil.com" class="btn btn-branding"
+                >Contact Me</a
+              >
+            </div>
+          </div>
+          <div class="d-flex justify-content-center mb-5">
+            <a href="mailto:coding.kim.d@gamil.com" class="email-link"
+              >coding.kim.d@gamil.com</a
+            >
+          </div>
+          <div class="social-links d-flex justify-content-center mb-5">
+            <a href="https://www.twitter.com/coding.kim" target="_blank"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://github.com/EleanorSplicer" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/kimberly-duvall-b9205431/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+        </footer>
       </div>
     </body>
   </html>
