--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
       <h1>Kimberly Duvall</h1>
       <h3 class="mb-5">Front-End Developer based Phoenix, AZ</h3>
       <div>
-        <a href="mailto:fallenmurphy@gmail.com" class="btn btn-branding"
+        <a href="mailto:coding.kim.d@gmail.com" class="btn btn-branding"
           >Contact Me</a
         >
       </div>
     </div>
-    <p class="text-center m-5">Highlights of my Projects</p>
+    <h3 class="text-center m-5">Highlights of my Projects</h3>
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block">
@@ -127,6 +127,39 @@
           />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p>Let's Work Together!</p>
+          </div>
+          <div>
+            <a href="mailto:coding.kim.d@gamil.com" class="btn btn-branding"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:coding.kim.d@gamil.com" class="email-link"
+            >coding.kim.d@gamil.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="https://www.twitter.com/coding.kim" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="https://github.com/EleanorSplicer" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/kimberly-duvall-b9205431/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
