Added SEO elements

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Kimberly is a new front-end engieer based in Phoenix, Arizona. Here's how you can get in contact with her."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +30,7 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Kimberly Duvall- Front-End Developer</title>
+    <title> Contact Kimberly Duvall</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #62929a">
@@ -47,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
@@ -56,7 +60,7 @@
               <a class="nav-link" href="/work.html">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -106,7 +110,7 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.twitter.com/coding.kim" target="_blank"
+          <a href="https://twitter.com/coding_kim" target="_blank"
             ><i class="fa-brands fa-twitter"></i
           ></a>
           <a href="https://github.com/EleanorSplicer" target="_blank"
@@ -118,6 +122,12 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
+        <p class="text-center mt-4">
+          This project was coded by Kimberly Duvall, and it is
+          <a href="https://github.com/EleanorSplicer/portfolio-project">
+            open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
