--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta
+        name="description"
+        content="Kimberly is a new front-end engieer with a background in infromal education."
+      />
       <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -28,7 +32,7 @@
       />
 
       <link rel="stylesheet" href="styles/portfolio.css" />
-      <title>Kimberly Duvall- Front-End Developer</title>
+      <title>About Kimberly Duvall</title>
     </head>
 
     <body>
@@ -50,10 +54,15 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/about.html"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/work.html">Work</a>
@@ -81,7 +90,7 @@
                 innovative projects, and making a positive impact on the digital
                 world.
               </p>
-              <a href="" class="btn btn-branding">See My Projects</a>
+              <a href="/work.html" class="btn btn-branding">See My Projects</a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -113,7 +122,7 @@
             >
           </div>
           <div class="social-links d-flex justify-content-center mb-5">
-            <a href="https://www.twitter.com/coding.kim" target="_blank"
+            <a href="https://twitter.com/coding_kim" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
             <a href="https://github.com/EleanorSplicer" target="_blank"
@@ -125,6 +134,12 @@
               ><i class="fa-brands fa-linkedin"></i
             ></a>
           </div>
+          <p class="text-center mt-4">
+            This project was coded by Kimberly Duvall, and it is
+            <a href="https://github.com/EleanorSplicer/portfolio-project">
+              open-sourced</a
+            >
+          </p>
         </footer>
       </div>
     </body>
