--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Kimberly is a new front-end engieer based in Phoenix, Arizona."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,16 +51,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Kimberly"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work.html">Work</a>
+              <a class="nav-link" href="/work.html" title="Kimberly's Work"
+                >Work</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Contact Kimberly"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -136,9 +152,7 @@
             <p>Let's Work Together!</p>
           </div>
           <div>
-            <a href="mailto:coding.kim.d@gamil.com" class="btn btn-branding"
-              >Contact Me</a
-            >
+            <a href="/contact.html" class="btn btn-branding">Contact Me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
@@ -147,18 +161,31 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.twitter.com/coding.kim" target="_blank"
+          <a
+            href="https://twitter.com/coding_kim"
+            target="_blank"
+            title="twitter"
             ><i class="fa-brands fa-twitter"></i
           ></a>
-          <a href="https://github.com/EleanorSplicer" target="_blank"
+          <a
+            href="https://github.com/EleanorSplicer"
+            target="_blank"
+            title="github"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/kimberly-duvall-b9205431/"
             target="_blank"
+            title="linkedin"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
+        <p class="text-center mt-4">
+          This project was coded by Kimberly Duvall, and it is
+          <a href="https://github.com/EleanorSplicer/portfolio-project">
+            open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
